--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS-10</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="filter-container">
+            <h2 class="title">user Filter</h2>
+            <input type="text" name="" id="input-filter">
+            <ul id="result" class="user-ul-list"></ul>    
+        </div>
+    </section>
+    <section>
+        <div class="api"></div>
+    </section>
+
+    
+
     
     <script src="script.js"></script>
 </body>
